chore: remove version specifications

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 cython
 pycocotools
-torch>=1.13.0
-torchvision>=0.14.0
+torch
+torchvision
 fairscale
 scipy
 timm
 tqdm
+numpy
+Pillow
+wandb
+ninja
